--- a/web/templates/work_orders/edit.html
+++ b/web/templates/work_orders/edit.html
@@ -27,68 +27,80 @@
                 Error: {{ error }}
             </div>
             {% endif %}
-            
+
             {% if wo %}
-            <form action="/clients/{{ client_id }}/contracts/{{ wo.contract_id }}/wo/{{ wo.id }}/edit" method="post" class="box">
+            <form action="/clients/{{ client_id }}/contracts/{{ wo.contract_id }}/wo/{{ wo.id }}/edit" method="post"
+                class="box">
                 <div class="field">
-                    <label class="label" for="name">Name *</label>
-                    <div class="control">
-                        <input class="input" type="text" id="name" name="name" value="{{ wo.name }}"
-                            required>
-                    </div>
+                    <label class="label" for="name">Name *
+                        <div class="control">
+                            <input class="input" type="text" id="name" name="name" value="{{ wo.name }}" required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="final_client">Final Client *</label>
-                    <div class="control">
-                        <input class="input" type="text" id="final_client" name="final_client" value="{{ wo.final_client }}"
-                            required>
-                    </div>
+                    <label class="label" for="final_client">Final Client *
+                        <div class="control">
+                            <input class="input" type="text" id="final_client" name="final_client"
+                                value="{{ wo.final_client }}" required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="client_project_code">Client Project Code *</label>
-                    <div class="control">
-                        <input class="input" type="text" id="client_project_code"
-                            name="client_project_code" value="{{ wo.client_project_code }}" required>
-                    </div>
+                    <label class="label" for="client_project_code">Client Project Code *
+                        <div class="control">
+                            <input class="input" type="text" id="client_project_code" name="client_project_code"
+                                value="{{ wo.client_project_code }}" required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="start_date">Start Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="start_date" name="start_date" value="{{ wo.start_date }}" required>
-                    </div>
+                    <label class="label" for="start_date">Start Date *
+                        <div class="control">
+                            <input class="input" type="date" id="start_date" name="start_date"
+                                value="{{ wo.start_date }}" required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="end_date">End Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="end_date" name="end_date" value="{{ wo.end_date }}" required>
-                    </div>
+                    <label class="label" for="end_date">End Date *
+                        <div class="control">
+                            <input class="input" type="date" id="end_date" name="end_date" value="{{ wo.end_date }}"
+                                required>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">Price *</label>
-                    <div class="control">
-                        <input class="input" type="number" step="0.01" id="price" name="price" value="{{ wo.price }}" required>
-                    </div>
+                    <label class="label">Price *
+                        <div class="control">
+                            <input class="input" type="number" step="0.01" id="price" name="price"
+                                value="{{ wo.price }}" required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="currency">Currency *</label>
-                    <div class="control">
-                        <input class="input" type="text" id="currency"
-                            name="currency" value="{{ wo.currency }}" required>
-                    </div>
+                    <label class="label" for="currency">Currency *
+                        <div class="control">
+                            <input class="input" type="text" id="currency" name="currency" value="{{ wo.currency }}"
+                                required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="measurement_unit">Measurement Unit *</label>
-                    <div class="control">
-                        <input class="input" type="text" id="measurement_unit"
-                            name="measurement_unit" value="{{ wo.measurement_unit }}" required>
-                    </div>
+                    <label class="label" for="measurement_unit">Measurement Unit *
+                        <div class="control">
+                            <input class="input" type="text" id="measurement_unit" name="measurement_unit"
+                                value="{{ wo.measurement_unit }}" required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field is-grouped">
                     <div class="control">
                         <button class="button is-primary">Submit</button>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
             {% endif %}
         </div>
