--- a/web/templates/activity_reports/edit.html
+++ b/web/templates/activity_reports/edit.html
@@ -4,8 +4,7 @@
     <section class="section">
         <nav>
             <ul>
-                <li><a class="button is-primary is-outlined"
-                        href="../../ar">Back</a></li>
+                <li><a class="button is-primary is-outlined" href="../../ar">Back</a></li>
             </ul>
         </nav>
         <hr>
@@ -27,36 +26,40 @@
                 Error: {{ error }}
             </div>
             {% endif %}
-            
+
             {% if ar %}
             <form action="edit" method="post" class="box">
                 <div class="field">
-                    <label class="label" for="name">Name *</label>
-                    <div class="control">
-                        <input class="input" type="text" id="name" name="name" value="{{ ar.name }}"
-                            required>
-                    </div>
+                    <label class="label" for="name">Name *
+                        <div class="control">
+                            <input class="input" type="text" id="name" name="name" value="{{ ar.name }}" required>
+                        </div>
+                    </label>
                 </div>
-            
+
                 <div class="field">
-                    <label class="label" for="date">Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="date" name="date" value="{{ ar.date }}" required>
-                    </div>
+                    <label class="label" for="date">Date *
+                        <div class="control">
+                            <input class="input" type="date" id="date" name="date" value="{{ ar.date }}" required>
+                        </div>
+                    </label>
                 </div>
-                
+
                 <div class="field">
-                    <label class="label">Hours *</label>
-                    <div class="control">
-                        <input class="input" type="number" step="0.01" id="hours_amount" name="hours_amount"  value="{{ ar.hours_amount }}" required>
-                    </div>
+                    <label class="label">Hours *
+                        <div class="control">
+                            <input class="input" type="number" step="0.01" id="hours_amount" name="hours_amount"
+                                value="{{ ar.hours_amount }}" required>
+                        </div>
+                    </label>
                 </div>
-                
+
                 <div class="field is-grouped">
                     <div class="control">
                         <button class="button is-primary">Submit</button>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
             {% endif %}
         </div>
