--- a/web/templates/activity_reports/new.html
+++ b/web/templates/activity_reports/new.html
@@ -30,32 +30,37 @@
 
             <form action="add" method="post" class="box">
                 <div class="field">
-                    <label class="label" for="name">Name *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="RA-ABC-YYYYMMDD001" id="name" name="name"
-                            required>
-                    </div>
+                    <label class="label" for="name">Name *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="RA-ABC-YYYYMMDD001" id="name" name="name"
+                                required>
+                        </div>
+                    </label>
                 </div>
-            
+
                 <div class="field">
-                    <label class="label" for="date">Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="date" name="date" required>
-                    </div>
+                    <label class="label" for="date">Date *
+                        <div class="control">
+                            <input class="input" type="date" id="date" name="date" required>
+                        </div>
+                    </label>
                 </div>
-                
+
                 <div class="field">
-                    <label class="label">Hours *</label>
-                    <div class="control">
-                        <input class="input" type="number" step="0.01" placeholder="10.5" id="hours_amount" name="hours_amount" required>
-                    </div>
+                    <label class="label">Hours *
+                        <div class="control">
+                            <input class="input" type="number" step="0.01" placeholder="10.5" id="hours_amount"
+                                name="hours_amount" required>
+                        </div>
+                    </label>
                 </div>
-                
+
                 <div class="field is-grouped">
                     <div class="control">
                         <button class="button is-primary">Submit</button>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
         </div>
 
