--- a/web/templates/auth/signup.html
+++ b/web/templates/auth/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -37,41 +37,47 @@
 
             <form action="/auth/signup" method="post" class="box">
                 <div class="field">
-                    <label class="label" for="first_name">First Name *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="John" id="first_name" name="first_name" required>
-                    </div>
+                    <label class="label" for="first_name">First Name *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="John" id="first_name" name="first_name"
+                                required>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label" for="last_name">Last Name *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="Doe" id="last_name" name="last_name" required>
-                    </div>
+                    <label class="label" for="last_name">Last Name *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="Doe" id="last_name" name="last_name" required>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">Phone Number</label>
-                    <div class="control">
-                        <input class="input" type="tel" placeholder="+40712345678" id="phone_number"
-                            name="phone_number">
-                    </div>
+                    <label class="label">Phone Number
+                        <div class="control">
+                            <input class="input" type="tel" placeholder="+40712345678" id="phone_number"
+                                name="phone_number">
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">Email *</label>
-                    <div class="control">
-                        <input class="input" type="email" placeholder="john.doe@example.com" id="email_address"
-                            name="email_address" required>
-                    </div>
+                    <label class="label">Email *
+                        <div class="control">
+                            <input class="input" type="email" placeholder="john.doe@example.com" id="email_address"
+                                name="email_address" required>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">Password *</label>
-                    <div class="control">
-                        <input class="input" type="password" placeholder="********" id="password" name="password"
-                            required>
-                    </div>
+                    <label class="label">Password *
+                        <div class="control">
+                            <input class="input" type="password" placeholder="********" id="password" name="password"
+                                required>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field is-grouped">
@@ -79,6 +85,7 @@
                         <button class="button is-primary">Sign up</button>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
         </div>
 
