--- a/web/templates/clients/edit_client.html
+++ b/web/templates/clients/edit_client.html
@@ -29,55 +29,65 @@
             {% if client_details %}
             <form action="/clients/{{ client_details.id }}/edit" method="post" class="box">
                 <div class="field">
-                    <label class="label" for="name">Name *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="Microsoft" id="name" name="name" value="{{ client_details.name }}" required>
-                    </div>
+                    <label class="label" for="name">Name *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="Microsoft" id="name" name="name"
+                                value="{{ client_details.name }}" required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="address">Address *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="15010 NE 36th Street, Redmond, WA 98052, USA" id="address" name="address" value="{{ client_details.address }}" required>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">Contact Person *</label>
-                    <div class="control">
-                        <input class="input" type="email" placeholder="john.doe@example.com" id="contact_person"
-                        name="contact_person" value="{{ client_details.contact_person }}" required>
-                    </div>
-                </div>
-                
-                <div class="field">
-                    <label class="label" for="address">Country *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="United States of America" id="country" name="country"  value="{{ client_details.country }}" required>
-                    </div>
+                    <label class="label" for="address">Address *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="15010 NE 36th Street, Redmond, WA 98052, USA"
+                                id="address" name="address" value="{{ client_details.address }}" required>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">Phone Number</label>
-                    <div class="control">
-                        <input class="input" type="tel" placeholder="+40712345678" id="phone_number"
-                            name="phone_number"  value="{{ client_details.phone_number }}">
-                    </div>
+                    <label class="label">Contact Person *
+                        <div class="control">
+                            <input class="input" type="email" placeholder="john.doe@example.com" id="contact_person"
+                                name="contact_person" value="{{ client_details.contact_person }}" required>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">ONRC Registration Number *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="J200100234540C" id="onrc_no" name="onrc_no" value="{{ client_details.onrc_no }}"
-                            required>
-                    </div>
+                    <label class="label" for="address">Country *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="United States of America" id="country"
+                                name="country" value="{{ client_details.country }}" required>
+                        </div>
+                    </label>
                 </div>
-                
+
                 <div class="field">
-                    <label class="label">Tax Code (CUI) *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="6859662" id="cui" name="cui"  value="{{ client_details.cui }}"
-                        required>
-                    </div>
+                    <label class="label">Phone Number
+                        <div class="control">
+                            <input class="input" type="tel" placeholder="+40712345678" id="phone_number"
+                                name="phone_number" value="{{ client_details.phone_number }}">
+                        </div>
+                    </label>
+                </div>
+
+                <div class="field">
+                    <label class="label">ONRC Registration Number *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="J200100234540C" id="onrc_no" name="onrc_no"
+                                value="{{ client_details.onrc_no }}" required>
+                        </div>
+                    </label>
+                </div>
+
+                <div class="field">
+                    <label class="label">Tax Code (CUI) *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="6859662" id="cui" name="cui"
+                                value="{{ client_details.cui }}" required>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field is-grouped">
@@ -85,6 +95,7 @@
                         <button class="button is-primary">Submit</button>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
             {% endif %}
         </div>
