--- a/web/templates/contracts/details.html
+++ b/web/templates/contracts/details.html
@@ -17,31 +17,39 @@
 
             <form class="box">
                 <div class="field">
-                    <label class="label" for="contract_no">Contract No. *</label>
-                    <div class="control">
-                        <input class="input" type="text" id="contract_no" name="contract_no" value="{{ contract.contract_no}}" readonly>
-                    </div>
+                    <label class="label" for="contract_no">Contract No.
+                        <div class="control">
+                            <input class="input" type="text" id="contract_no" name="contract_no"
+                                value="{{ contract.contract_no}}" readonly>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="start_date">Start Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="start_date" name="start_date" value="{{ contract.start_date }}" readonly>
-                    </div>
+                    <label class="label" for="start_date">Start Date
+                        <div class="control">
+                            <input class="input" type="date" id="start_date" name="start_date"
+                                value="{{ contract.start_date }}" readonly>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label" for="end_date">End Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="end_date" name="end_date" value="{{ contract.end_date}}" readonly>
-                    </div>
+                    <label class="label" for="end_date">End Date
+                        <div class="control">
+                            <input class="input" type="date" id="end_date" name="end_date"
+                                value="{{ contract.end_date}}" readonly>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">Description</label>
-                    <div class="control">
-                        <input class="input" type="text" id="description"
-                        name="description" value="{{ contract.description }}" readonly>
-                    </div>
+                    <label class="label">Description
+                        <div class="control">
+                            <input class="input" type="text" id="description" name="description"
+                                value="{{ contract.description }}" readonly>
+                        </div>
+                    </label>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
         </div>
 
