--- a/web/templates/invoices/add_items.html
+++ b/web/templates/invoices/add_items.html
@@ -34,7 +34,8 @@
                     <div class="control">
                         {% for item in available_items %}
                         <label class="checkbox">
-                            <input type="checkbox" id="ar_id_{{ item.id }}" name="ar_id_{{ item.id }}" value="{{ item.id }}" />
+                            <input type="checkbox" id="ar_id_{{ item.id }}" name="ar_id_{{ item.id }}"
+                                value="{{ item.id }}" />
                             {{ item.name }}
                         </label>
                         {% endfor %}
@@ -46,6 +47,7 @@
                         <button class="button is-primary">Submit</button>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
             {% else %}
             <div class="notification is-inactive is-light box">
