--- a/web/templates/invoices/edit.html
+++ b/web/templates/invoices/edit.html
@@ -31,95 +31,104 @@
             <form action="/invoices/{{ invoice_id }}/edit" method="post" class="box">
 
                 <div class="field">
-                    <label class="label" for="name">Name *</label>
-                    <div class="control">
-                        <input class="input" type="text" id="name" name="name" value="{{ invoice.name }}" required>
-                    </div>
+                    <label class="label" for="name">Name *
+                        <div class="control">
+                            <input class="input" type="text" id="name" name="name" value="{{ invoice.name }}" required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label">Currency *</label>
-                    <div class="control">
-                        <div class="select">
-                            <select id="currency" name="currency">
-                                {% if invoice.currency == "Euro" %}
-                                <option selected="selected">Euro</option>
-                                {% else %}
-                                <option>Euro</option>
-                                {% endif %}
-                                {% if invoice.currency == "Lei" %}
-                                <option selected="selected">Lei</option>
-                                {% else %}
-                                <option>Lei</option>
-                                {% endif %}
-                                {% if invoice.currency == "USD" %}
-                                <option selected="selected">USD</option>
-                                {% else %}
-                                <option>USD</option>
-                                {% endif %}
-                            </select>
+                    <label class="label">Currency *
+                        <div class="control">
+                            <div class="select">
+                                <select id="currency" name="currency">
+                                    {% if invoice.currency == "Euro" %}
+                                    <option selected="selected">Euro</option>
+                                    {% else %}
+                                    <option>Euro</option>
+                                    {% endif %}
+                                    {% if invoice.currency == "Lei" %}
+                                    <option selected="selected">Lei</option>
+                                    {% else %}
+                                    <option>Lei</option>
+                                    {% endif %}
+                                    {% if invoice.currency == "USD" %}
+                                    <option selected="selected">USD</option>
+                                    {% else %}
+                                    <option>USD</option>
+                                    {% endif %}
+                                </select>
+                            </div>
                         </div>
-                    </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">Exchange Rate *</label>
-                    <div class="control">
-                        <input class="input" type="number" step="0.0001" id="exchange_rate"
-                            name="exchange_rate" value="{{ invoice.exchange_rate }}" required>
-                    </div>
-                </div>
-                <div class="field">
-                    <label class="label" for="invoice_date">Invoice Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="invoice_date" name="invoice_date" value="{{ invoice.invoice_date }}" required>
-                    </div>
-                </div>
-                <div class="field">
-                    <label class="label" for="due_date">Due Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="due_date" name="due_date" value="{{ invoice.due_date }}" required>
-                    </div>
-                </div>
-                <div class="field">
-                    <label class="label">Status *</label>
-                    <div class="control">
-                        <div class="select" >
-                            <select id="status" name="status">
-                                {% if invoice.status == "Draft" %}
-                                <option selected="selected">Draft</option>
-                                {% else %}
-                                <option>Draft</option>
-                                {% endif %}
-                                 {% if invoice.status == "Issued" %}
-                                <option selected="selected">Issued</option>
-                                {% else %}
-                                <option>Issued</option>
-                                {% endif %}
-                                 {% if invoice.status == "Payed" %}
-                                <option selected="selected">Payed</option>
-                                {% else %}
-                                <option>Payed</option>
-                                {% endif %}
-                            </select>
+                    <label class="label">Exchange Rate *
+                        <div class="control">
+                            <input class="input" type="number" step="0.0001" id="exchange_rate" name="exchange_rate"
+                                value="{{ invoice.exchange_rate }}" required>
                         </div>
-                    </div>
+                    </label>
                 </div>
-                
                 <div class="field">
-                    <label class="label">Client *</label>
-                    <div class="control">
-                        <div class="select">
-                            <select id="client_id" name="client_id">
-                                {% for client in client_list %}
-                                {% if invoice.client_id == client.id %}
-                                <option value="{{ client.id }}" selected="selected">{{ client.name }}</option>
-                                {% else %}
-                                <option value="{{ client.id }}">{{ client.name }}</option>
-                                {% endif %}
-                                {% endfor %}
-                            </select>
+                    <label class="label" for="invoice_date">Invoice Date *
+                        <div class="control">
+                            <input class="input" type="date" id="invoice_date" name="invoice_date"
+                                value="{{ invoice.invoice_date }}" required>
                         </div>
-                    </div>
+                    </label>
+                </div>
+                <div class="field">
+                    <label class="label" for="due_date">Due Date *
+                        <div class="control">
+                            <input class="input" type="date" id="due_date" name="due_date"
+                                value="{{ invoice.due_date }}" required>
+                        </div>
+                    </label>
+                </div>
+                <div class="field">
+                    <label class="label">Status *
+                        <div class="control">
+                            <div class="select">
+                                <select id="status" name="status">
+                                    {% if invoice.status == "Draft" %}
+                                    <option selected="selected">Draft</option>
+                                    {% else %}
+                                    <option>Draft</option>
+                                    {% endif %}
+                                    {% if invoice.status == "Issued" %}
+                                    <option selected="selected">Issued</option>
+                                    {% else %}
+                                    <option>Issued</option>
+                                    {% endif %}
+                                    {% if invoice.status == "Payed" %}
+                                    <option selected="selected">Payed</option>
+                                    {% else %}
+                                    <option>Payed</option>
+                                    {% endif %}
+                                </select>
+                            </div>
+                        </div>
+                    </label>
+                </div>
+
+                <div class="field">
+                    <label class="label">Client *
+                        <div class="control">
+                            <div class="select">
+                                <select id="client_id" name="client_id">
+                                    {% for client in client_list %}
+                                    {% if invoice.client_id == client.id %}
+                                    <option value="{{ client.id }}" selected="selected">{{ client.name }}</option>
+                                    {% else %}
+                                    <option value="{{ client.id }}">{{ client.name }}</option>
+                                    {% endif %}
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field is-grouped">
@@ -127,6 +136,7 @@
                         <button class="button is-primary">Submit</button>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
             {% endif %}
         </div>
