--- a/web/templates/invoices/new.html
+++ b/web/templates/invoices/new.html
@@ -30,67 +30,75 @@
             <form action="/invoices/add" method="post" class="box">
 
                 <div class="field">
-                    <label class="label" for="name">Name *</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="DCA-ID-YY/SOLO" id="name" name="name" required>
-                    </div>
+                    <label class="label" for="name">Name *
+                        <div class="control">
+                            <input class="input" type="text" placeholder="DCA-ID-YY/SOLO" id="name" name="name"
+                                required>
+                        </div>
+                    </label>
                 </div>
                 <div class="field">
-                    <label class="label">Currency *</label>
-                    <div class="control">
-                        <div class="select">
-                            <select id="currency" name="currency">
-                                <option>Euro</option>
-                                <option>Lei</option>
-                                <option>USD</option>
-                            </select>
+                    <label class="label">Currency *
+                        <div class="control">
+                            <div class="select">
+                                <select id="currency" name="currency">
+                                    <option>Euro</option>
+                                    <option>Lei</option>
+                                    <option>USD</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
+                    </label>
                 </div>
 
                 <div class="field">
-                    <label class="label">Exchange Rate *</label>
-                    <div class="control">
-                        <input class="input" type="number" step="0.0001" placeholder="5.0772" id="exchange_rate"
-                            name="exchange_rate" required>
-                    </div>
-                </div>
-                <div class="field">
-                    <label class="label" for="invoice_date">Invoice Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="invoice_date" name="invoice_date" required>
-                    </div>
-                </div>
-                <div class="field">
-                    <label class="label" for="due_date">Due Date *</label>
-                    <div class="control">
-                        <input class="input" type="date" id="due_date" name="due_date" required>
-                    </div>
-                </div>
-                <div class="field">
-                    <label class="label">Status *</label>
-                    <div class="control">
-                        <div class="select" >
-                            <select id="status" name="status">
-                                <option>Draft</option>
-                                <option>Issued</option>
-                                <option>Payed</option>
-                            </select>
+                    <label class="label">Exchange Rate *
+                        <div class="control">
+                            <input class="input" type="number" step="0.0001" placeholder="5.0772" id="exchange_rate"
+                                name="exchange_rate" required>
                         </div>
-                    </div>
+                    </label>
                 </div>
-                
                 <div class="field">
-                    <label class="label">Client *</label>
-                    <div class="control">
-                        <div class="select">
-                            <select id="client_id" name="client_id">
-                                {% for client in client_list %}
-                                <option value="{{ client.id }}">{{ client.name }}</option>
-                                {% endfor %}
-                            </select>
+                    <label class="label" for="invoice_date">Invoice Date *
+                        <div class="control">
+                            <input class="input" type="date" id="invoice_date" name="invoice_date" required>
                         </div>
-                    </div>
+                    </label>
+                </div>
+                <div class="field">
+                    <label class="label" for="due_date">Due Date *
+                        <div class="control">
+                            <input class="input" type="date" id="due_date" name="due_date" required>
+                        </div>
+                    </label>
+                </div>
+                <div class="field">
+                    <label class="label">Status *
+                        <div class="control">
+                            <div class="select">
+                                <select id="status" name="status">
+                                    <option>Draft</option>
+                                    <option>Issued</option>
+                                    <option>Payed</option>
+                                </select>
+                            </div>
+                        </div>
+                    </label>
+                </div>
+
+                <div class="field">
+                    <label class="label">Client *
+                        <div class="control">
+                            <div class="select">
+                                <select id="client_id" name="client_id">
+                                    {% for client in client_list %}
+                                    <option value="{{ client.id }}">{{ client.name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </label>
                 </div>
 
                 <div class="field is-grouped">
@@ -98,6 +106,7 @@
                         <button class="button is-primary">Submit</button>
                     </div>
                 </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </form>
         </div>
 
