--- a/web/templates/work_orders/list.html
+++ b/web/templates/work_orders/list.html
@@ -7,13 +7,13 @@
                 <a class="navbar-item" href="/dashboard/home">
                     PFA Manager
                 </a>
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
-                    data-target="navbarBasicExample">
+                <button class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample"
+                    type="button">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
-                </a>
+                </button>
             </div>
 
             <div id="navbarBasicExample" class="navbar-menu">
@@ -66,24 +66,23 @@
             <table class="table is-hoverable is-fullwidth">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Final Client</th>
-                        <th>End Date</th>
-                        <th>Status</th>
-                        <th>Actions</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Final Client</th>
+                        <th scope="col">End Date</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for wo in wo_list %}
                     <tr>
-                        <th>{{ wo.name }}</th>
+                        <th scope="row">{{ wo.name }}</th>
 
                         <td>{{ wo.final_client }}</td>
                         <td>{{ wo.end_date }}</td>
                         <td>{{ wo.status }}</td>
                         <td>
                             <div class="buttons">
-                                <!-- TODO: Use the following style for relative links instead of ones starting with /clients -->
                                 <a class="button is-link is-small is-rounded" href="wo/{{ wo.id }}/ar">Activity Reports</a>
                                 <a class="button is-info is-small is-rounded" href="wo/{{ wo.id }}/view">View</a>
                                 <a class="button is-warning is-small is-rounded" href="wo/{{ wo.id }}/edit">Edit</a>
